# SoftRenderer

./: CMakeLists.txt  Game.cpp  Game.h  Model.cpp  Model.h  TGAImage.cpp  Timer.cpp  Timer.h  main.cpp  mainWindow.cpp
res/: lightning_obj01.mtl
